cmake_minimum_required(VERSION 3.27)


add_subdirectory(ex01-object)
add_subdirectory(ex02-cStyleCcode)
add_subdirectory(ex03-classBasicGrammar)
add_subdirectory(ex04-classConstructorDestructor)
add_subdirectory(ex05-classMemberVariableReset)
add_subdirectory(ex06-multiConstructor)
add_subdirectory(ex07-thisPointer)
add_subdirectory(ex08-cMyStringStep01)
add_subdirectory(ex09-CMyStringStep02)
add_subdirectory(ex10-staticVariable)
add_subdirectory(ex11-copyConstructor)
add_subdirectory(ex12-tempObjAndCopyConstructor)
add_subdirectory(ex13-deepCopyAndShallowCopy)
add_subdirectory(ex14-CMyStringStep03)
add_subdirectory(ex15-conversionConstructor)
add_subdirectory(ex16-CMyStringStep04)
add_subdirectory(ex17-01-RValueReference)
add_subdirectory(ex17-02-RvalueReferenceError)
add_subdirectory(ex18-moveSemantics)
add_subdirectory(ex19-CMyStringStep05)