cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex01-opArithmetic)
add_subdirectory(ex02-CMyStringStep06)
add_subdirectory(ex03-opAssignReturnValue)
add_subdirectory(ex04-opFuncReDefine)
add_subdirectory(ex05-opArray)
add_subdirectory(ex06-unaryOperator)
add_subdirectory(ex07-CMyStringStep07)
add_subdirectory(ex08-friendKeyword)
add_subdirectory(ex09-CMyStringStep08)
add_subdirectory(ex10-inheritanceClass)
add_subdirectory(ex11-OverRideRef)
add_subdirectory(ex12-CMyStringStep09)
add_subdirectory(ex13-InheritanceConstructorAndDestructor)
add_subdirectory(ex14-InheritanceSelectConstructor)