cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex01-virtualKeyword)
add_subdirectory(ex02-virtualDestructor)
add_subdirectory(ex03-CMyStringStep10)
add_subdirectory(ex04-binding)
add_subdirectory(ex04_01-vtableSample)
add_subdirectory(ex05-pureVirtualFunction)
add_subdirectory(ex06-interfaceExample)
add_subdirectory(ex07-casting)
add_subdirectory(ex08_01-typeid)
add_subdirectory(ex08_02-dynamicCasting)
add_subdirectory(ex09_01-multiInheritance)
add_subdirectory(ex09_02-multiInterface)