cmake_minimum_required(VERSION 3.27)

add_subdirectory(ex01-templateClass)
add_subdirectory(ex02-specializationTemplate)
add_subdirectory(ex03-templateArray)
add_subdirectory(ex04-templateInherit)
add_subdirectory(ex05_01-smartPointerAutoPtr)
add_subdirectory(ex05_02-smartPointerAutoPtrError)
add_subdirectory(ex06_01-smartPointerSharedPtr)
add_subdirectory(ex06_02-smartPointerSharedPtrArray)
add_subdirectory(ex06_03-smartPointerUniquePtr)