cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex01_01-ifErrorHandle)
add_subdirectory(ex01_02-gotoErrorHandle)
add_subdirectory(ex01_03-tryThrowCatch)
add_subdirectory(ex02-multiCatch)
add_subdirectory(ex03-stackUnwinding)
add_subdirectory(ex04-exceptionClass)
add_subdirectory(ex05-memoryErrorClass)